Fix check: build-windows

--- a/rcgen/Cargo.toml
+++ b/rcgen/Cargo.toml
@@ -32,6 +32,10 @@ zeroize = { workspace = true, optional = true }
 openssl = { workspace = true }
 
 [[example]]
+name = "certificate_policies"
+required-features = ["pem"]
+
+[[example]]
 name = "rsa-irc-openssl"
 required-features = ["pem"]
 
